# python-semantic-version

./: .gitignore  pyproject.toml
.github/workflows/: compile-and-test.yml
src/semantic_version/: version.py
tests/: test_version.py
