[project]
name = "semantic-version"
version = "0.1.0"
description = ""
authors = [
    {name = "shinsuke-mat",email = "shinsuke-mat@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "semantic_version", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
